Kyori Text Adventure Update